chore: agent updates